Booker > prevent line breaks on dropdown items

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -8782,6 +8782,7 @@ header {
   min-width: 200px;
   padding: 8px;
   -webkit-transition: height 0.1s ease-in-out;
+  /* .crumb-dropdown-content */
 }
 .crumb-dropdown .cover-box-shadow {
   display: inline-block;
@@ -8794,6 +8795,9 @@ header {
 }
 .crumb-dropdown .crumb-dropdown-content {
   overflow: auto;
+}
+.crumb-dropdown .room_item {
+  white-space: nowrap;
 }
 /* } */
 .activity-module {
