--- a/assets/less/bootstrap/booker.less
+++ b/assets/less/bootstrap/booker.less
@@ -933,6 +933,10 @@
 		.crumb-dropdown-content {
 			overflow: auto;
 		}
+
+		/* .crumb-dropdown-content */ .room_item {
+			white-space: nowrap;
+		}
 	}
 
 /* } */
